--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@vssue/api-github-v4": "^1.4.0",
+    "@vssue/vuepress-plugin-vssue": "^1.4.6"
+  },
   "devDependencies": {
     "@vuepress/plugin-active-header-links": "^1.5.0",
     "@vuepress/plugin-google-analytics": "^1.5.0",
