--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.8.27",
     "vue-feather-icons": "^5.0.0",
     "vuepress": "^1.5.0",
+    "vuepress-plugin-google-adsense": "^0.1.1",
     "vuepress-plugin-rss": "^2.0.0",
     "vuepress-plugin-sitemap": "^2.3.1"
   }
