--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "vuepress-plugin-google-adsense": "^0.2.1",
     "vuepress-plugin-rss": "^2.0.0",
     "vuepress-plugin-sitemap": "^2.3.1"
+  },
+  "resolutions": {
+    "ws": "7.4.6"
   }
 }
