--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@vuepress/plugin-active-header-links": "^1.8.2",
     "@vuepress/plugin-google-analytics": "^1.8.2",
     "@vuepress/plugin-pwa": "^1.8.2",
-    "dayjs": "^1.10.5",
+    "dayjs": "^1.10.7",
     "vue-feather-icons": "^5.1.0",
     "vuepress": "^1.8.2",
     "vuepress-plugin-google-adsense": "^0.2.1",
@@ -19,6 +19,7 @@
     "vuepress-plugin-sitemap": "^2.3.1"
   },
   "resolutions": {
-    "ws": "7.4.6"
+    "ws": "8.2.2",
+    "glob-parent": "6.0.1"
   }
 }
