--- a/package.json
+++ b/package.json
@@ -8,18 +8,21 @@
     "@vssue/vuepress-plugin-vssue": "^1.4.8"
   },
   "devDependencies": {
-    "@vuepress/plugin-active-header-links": "^1.8.2",
-    "@vuepress/plugin-google-analytics": "^1.8.2",
-    "@vuepress/plugin-pwa": "^1.8.2",
+    "@vuepress/plugin-active-header-links": "^1.9.5",
+    "@vuepress/plugin-google-analytics": "^1.9.5",
+    "@vuepress/plugin-pwa": "^1.9.5",
     "dayjs": "^1.10.7",
     "vue-feather-icons": "^5.1.0",
-    "vuepress": "^1.8.2",
+    "vuepress": "^1.9.5",
     "vuepress-plugin-google-adsense": "^0.2.1",
     "vuepress-plugin-rss": "^2.0.0",
     "vuepress-plugin-sitemap": "^2.3.1"
   },
   "resolutions": {
     "ws": "8.2.2",
-    "glob-parent": "6.0.1"
+    "glob-parent": "6.0.2",
+    "nth-check": "^2.0.1",
+    "highlight.js": "^11.3.1",
+    "ansi-regex": "^5.0.1"
   }
 }
